tests/health/gold/sdk/tests__lsp__error_outline.toit.gold
tests/lsp/error_outline.toit:5:6: error: Expected class name
class:
     ^
tests/lsp/error_outline.toit:13:11: error: Expected name of declaration
  abstract
          ^
tests/lsp/error_outline.toit:18:9: error: Expected name of declaration
  static:
        ^
tests/lsp/error_outline.toit:21:1: error: Expected name of declaration
:
^
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
